src/syntax/tests/data/negative/conditionals-1.hsh
if true and true then
	# empty
else
	# empty
elseif true and true then
	# empty
end
